5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1635_869.log
== TEST (2019-04-14 11:25:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200)
	valor = (valortotal - valortotal*0.05)
	print(valor)
else:
	valor = valortotal
	print(valor)
-- ERROR:
File "XXXX", line 5
    if (valortotal >= 200)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:25:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200)
	valor = (valortotal - valortotal*0.05)
	print(valor)
else:
	valor = valortotal
	print(valor)
-- EXECUTION TIME:
0.138145
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 5
    if (valortotal >= 200)
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:25:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200)
	valor = (valortotal - valortotal*0.05)
	print(valor)
else:
	valor = valortotal
	print(valor)
-- ERROR:
File "XXXX", line 5
    if (valortotal >= 200)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:25:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(valor)
else:
	valor = valortotal
	print(valor)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:25:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(valor)
else:
	valor = valortotal
	print(valor)
-- EXECUTION TIME:
0.143178
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.0855
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5035
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:25:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(valor)
else:
	valor = valortotal
	print(valor)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:25:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(valor)
else:
	valor = valortotal
	print(valor)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:25:52) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(valor)
else:
	valor = valortotal
	print(valor)
-- OUTPUT:
190.0855
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:26:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2)
else:
	valor = valortotal
	print(round(valor, 2)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:26:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2)
else:
	valor = valortotal
	print(round(valor, 2)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:26:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2)
else:
	valor = valortotal
	print(round(valor, 2)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:26:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2)
else:
	valor = valortotal
	print(round(valor, 2)
-- EXECUTION TIME:
0.17501
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:26:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2)
else:
	valor = valortotal
	print(round(valor, 2)
-- ERROR:
File "XXXX", line 8
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:26:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))
if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2)
else:
	valor = valortotal
	print(round(valor, 2)
-- EXECUTION TIME:
0.122269
-- ERROR:
  File "/home/codebench/codes/1635/869/main.py", line 8
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:26:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))

if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2)
else:
	valor = valortotal
	print(round(valor, 2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:27:14) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))

if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2)
else:
	valor = valortotal
	print(round(valor, 2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:28:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))

if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2))
else:
	valor = valortotal
	print(round(valor, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 11:28:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
valortotal =  float(input("valor: "))

if (valortotal >= 200):
	valor = (valortotal - valortotal*0.05)
	print(round(valor, 2))
else:
	valor = valortotal
	print(round(valor, 2))
-- EXECUTION TIME:
0.159778
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
